# clim-kadai

./: pyproject.toml
output/00_show_hdf/: 00_show_hdf.txt
src/: 00_show_hdf.py
